# HomeDesk-API

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Rocket.toml.template
migrations/: 20260222181727_create_users.sql  20260222182416_create_teams.sql  20260222182945_create_credentials.sql  20260222193125_create_invite_codes.sql
src/: main.rs  models.rs
src/routes/: auth.rs  mod.rs
